<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_categoria"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/texView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombre_categoria" />

    <EditText
        android:id="@+id/etAgregarCat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnAgregarCat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar" />

        <Button
            android:id="@+id/btnAgregarCat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/volver" />

    </LinearLayout>

</LinearLayout>
