<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clientes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listViewClientes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.92" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <Button
                android:id="@+id/btnAgregarClientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agregar" />

            <Button
                android:id="@+id/btnVolverClientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/volver" />
    </LinearLayout>
    
</LinearLayout>